trunk/Archive2/37/6c1d2fa4c419bb/output
main.cpp:9:2: error: invalid preprocessing directive #includ
 #includ <cstdio>
  ^
main.cpp: In function 'int main(int, char**)':
main.cpp:392:52: error: 'printf' was not declared in this scope
     printf("%s, Comando [%s]", "Funcion::test", 'a');
                                                    ^
main.cpp:382:9: warning: unused variable 'iIndex' [-Wunused-variable]
     int iIndex = 7;
         ^
